--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="calculation-box">
-                <h3>¿Cómo Se Calcula el Ahorro de $3M Semanales?</h3>
+                <h3>¿Cómo Se Calcula el Ahorro de $3M Mes?</h3>
                 <ul>
                     <li><strong>Reclamación típica sin respaldo:</strong> $1.5M–$3M (pantalla, daño cosmético, "así no venía")</li>
                     <li><strong>Frecuencia en talleres informales:</strong> 1–2 reclamaciones por semana</li>
@@ -287,7 +287,7 @@
                     </div>
                     <div class="main-feature-item">
                         <strong>💬 WhatsApp al Cliente</strong><br>
-                        <span style="font-size: 0.9rem;">Notificaciones automáticas</span>
+                        <span style="font-size: 0.9rem;">Notificaciones en 2 clics</span>
                     </div>
                 </div>
             </div>
@@ -317,14 +317,14 @@
                     <ul>
                         <li>Venta rápida de accesorios</li>
                         <li>Control de créditos/fiados</li>
-                        <li>Facturación integrada</li>
+                        <li>Recibo de venta integrada</li>
                         <li>Comisiones por vendedor</li>
                     </ul>
                 </div>
                 <div class="feature-card">
                     <h3>💵 Gestión de Caja</h3>
                     <ul>
-                        <li>Ingresos por servicios y ventas</li>
+                        <li>Ingresos por servicios</li>
                         <li>Gastos y costos fijos</li>
                         <li>Resumen claro de flujo de caja</li>
                         <li>Saber cuánto ganas realmente</li>
@@ -351,7 +351,7 @@
                 <div class="result-card">
                     <div class="result-icon">📸</div>
                     <h3>Cero Reclamaciones Injustas</h3>
-                    <div class="number">$3M/semana</div>
+                    <div class="number">+$3M/mes</div>
                     <p>Recuperados con respaldo fotográfico de cada ingreso. El cliente no puede reclamar algo que está documentado desde el día 1.</p>
                 </div>
                 <div class="result-card">
@@ -383,7 +383,7 @@
             <div class="testimonial-card">
                 <p class="testimonial-text">"Antes perdíamos 2 horas diarias buscando información en cuadernos y Excel. Ahora con MONKEYS Lab encontramos cualquier orden en 5 segundos y el cliente recibe notificaciones automáticas. Han sido $3M ahorrados solo en reclamaciones evitadas."</p>
                 <p class="testimonial-author">
-                    <span>— SmartLab, Bogotá</span>
+                    <span>— SmartFix, Bogotá</span>
                     <span class="testimonial-verified">✓ Cliente Verificado</span>
                 </p>
             </div>
@@ -415,7 +415,7 @@
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">¿En qué dispositivos funciona?</div>
-                    <div class="faq-answer">En cualquier dispositivo con navegador web: celulares Android, iPhone, tablets, computadores Windows, Mac. No necesitas instalar ninguna aplicación.</div>
+                    <div class="faq-answer">En cualquier dispositivo con navegador web: celulares Android, iPhone, tablets, computadores Windows, Mac.</div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">¿Cuánto tarda la implementación?</div>
@@ -426,12 +426,12 @@
                     <div class="faq-answer">El soporte continúa incluido en la anualidad. Los 30 días iniciales son de soporte intensivo para resolver cualquier duda. Después, puedes contactarnos por WhatsApp cuando necesites.</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">¿Puedo tener 2 sedes o sucursales?</div>
-                    <div class="faq-answer">Sí. El sistema permite múltiples sedes con inventarios separados y reportes consolidados. Esto se configura durante la implementación según tus necesidades.</div>
+                    <div class="faq-question">¿Puedo abrir la App en varios dispositivos?</div>
+                    <div class="faq-answer">Sí. El sistema permite múltiples seciones. Esto se configura durante la implementación según tus necesidades.</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">¿Se pueden exportar los datos?</div>
-                    <div class="faq-answer">Sí. Puedes exportar reportes a Excel/PDF en cualquier momento. Tus datos son tuyos y tienes control total sobre ellos.</div>
+                    <div class="faq-question">¿Se pueden exportar lasOrdenes De Servicio?</div>
+                    <div class="faq-answer">Sí. Puedes exportar en PDF en cualquier momento. Tus datos son tuyos y tienes control total sobre ellos.</div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-question">¿Puedo tener roles diferentes por técnico/asesor?</div>
@@ -502,7 +502,7 @@
                             <li>Plantillas de orden + check list + cotizaciones</li>
                             <li>Capacitación 2 sesiones (equipo completo)</li>
                             <li>Configuración completa de inventario + alertas</li>
-                            <li>Integración WhatsApp Business (si tienes)</li>
+                            <li>Integración Boton de WhatsApp Business </li>
                         </ul>
                     </div>
                     
@@ -553,7 +553,7 @@
             <h2>¿Listo Para Dejar de Perder Dinero por Desorden?</h2>
             <p>Agenda una demostración de 15 minutos y ve cómo MONKEYS Lab resuelve tus problemas específicos</p>
             <a href="https://wa.link/kzkc0n?text=Hola,%20quiero%20agendar%20demo%20de%20MONKEYS%20Lab" class="cta-button cta-secondary" style="font-size: 1.5rem; padding: 20px 50px;">Agendar Demostración Gratis</a>
-            <p style="margin-top: 30px; font-size: 1.1rem;">📱 WhatsApp: +57 320-435-9590</p>
+            <p style="margin-top: 30px; font-size: 1.1rem;">📱 WhatsApp: +57 318-942-3523</p>
             <p style="margin-top: 10px;">⚡ Oferta de lanzamiento válida solo hasta el 28 de febrero 2026</p>
         </div>
     </section>
