--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph para WhatsApp/Facebook -->
     <meta property="og:title" content="MONKEYS Lab - Software para Talleres Técnicos">
     <meta property="og:description" content="Evita reclamaciones y pérdidas con evidencia fotográfica + órdenes digitales. Sistema completo desde el celular.">
-    <meta property="og:image" content="https://tu-dominio.com/og-image.jpg">
+    <meta property="og:image" content="https://monkeysapps.online/og-image.jpg">
     <meta property="og:url" content="https://tu-dominio.com">
     <meta property="og:type" content="website">
     
