--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="MONKEYS Lab - Software para Talleres Técnicos">
     <meta property="og:description" content="Evita reclamaciones y pérdidas con evidencia fotográfica + órdenes digitales. Sistema completo desde el celular.">
     <meta property="og:image" content="https://monkeysapps.online/og-image.jpg">
-    <meta property="og:url" content="https://tu-dominio.com">
+    <meta property="og:url" content="https://monkeysapps.online">
     <meta property="og:type" content="website">
     
     <title>MONKEYS Lab - Software para Talleres Técnicos de Celulares</title>
@@ -430,7 +430,7 @@
                     <div class="faq-answer">Sí. El sistema permite múltiples seciones. Esto se configura durante la implementación según tus necesidades.</div>
                 </div>
                 <div class="faq-item">
-                    <div class="faq-question">¿Se pueden exportar lasOrdenes De Servicio?</div>
+                    <div class="faq-question">¿Se pueden exportar las Ordenes De Servicio?</div>
                     <div class="faq-answer">Sí. Puedes exportar en PDF en cualquier momento. Tus datos son tuyos y tienes control total sobre ellos.</div>
                 </div>
                 <div class="faq-item">
@@ -563,7 +563,7 @@
         <div class="container">
             <p>&copy; 2026 MONKEYS Lab - Software para Talleres Técnicos</p>
             <p style="margin-top: 10px; opacity: 0.8;">10+ talleres verificados | 3 años de experiencia | Bogotá, Medellín, Cali</p>
-            <p style="margin-top: 20px; font-size: 0.9rem;"><a href="#faq" style="color: white; text-decoration: underline;">Preguntas Frecuentes</a> | <a href="mailto:contacto@tudominio.com" style="color: white; text-decoration: underline;">Contacto</a></p>
+            <p style="margin-top: 20px; font-size: 0.9rem;"><a href="#faq" style="color: white; text-decoration: underline;">Preguntas Frecuentes</a> | <a href="mailto:hola@monkeysapps.online" style="color: white; text-decoration: underline;">Contacto</a></p>
         </div>
     </footer>
     
