--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="Software para talleres técnicos de celulares que elimina reclamaciones injustas con evidencia fotográfica, órdenes digitales y control total. Implementación en 48-72h.">
     
     <!-- Open Graph para WhatsApp/Facebook -->
+    <meta property="og:url" content="https://monkeysapps.online/">
+    <meta property="og:type" content="website">
     <meta property="og:title" content="MONKEYS Lab - Software para Talleres Técnicos">
     <meta property="og:description" content="Evita reclamaciones y pérdidas con evidencia fotográfica + órdenes digitales. Sistema completo desde el celular.">
     <meta property="og:image" content="https://monkeysapps.online/og-image.jpg">
-    <meta property="og:url" content="https://monkeysapps.online">
-    <meta property="og:type" content="website">
     
     <title>MONKEYS Lab - Software para Talleres Técnicos de Celulares</title>
     <link rel="icon" type="image/png" href="favicon.png">
