--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Evita reclamaciones y pérdidas con evidencia fotográfica + órdenes digitales. Sistema completo desde el celular. Desde $1.6M/año">
     <meta property="og:image" content="https://monkeysapps.online/og-image.jpg">
     <meta property="og:image:secure_url" content="https://monkeysapps.online/og-image.jpg">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="es_CO">
